# SOM_Surface_Reconstruction

./: CMakeLists.txt  README.md
apps/SOM/: SOMwidget.cpp  SOMwidget.h  main.cpp  parameters.xml
apps/SOM_Reconstruction/: SOMSurfaceresources.qrc  SOMSurfaceresources.qrc.depends  SOMSurfacewidget.cpp  SOMSurfacewidget.h  SurfaceViewer.cpp  SurfaceViewer.h  main.cpp  parameters.xml
apps/common/: data3DInputFile.h  dataset.h  dataset3D.h
cuda/som/: som_kernels.cu  som_kernels.h
cuda/som_surface/: som_surface_kernels.cu  som_surface_kernels.h
